--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,14 +8,13 @@
     }
     #map {
         position : absolute;
-        top : 300px;
         left : 0px;
     	width:355px;
     	height:280px;
     }
     #btnA {
         font-size: 15px;
-        position:absolute; top:270px; left:0px; width:355px;height:30px;
+        left:0px; width:130px;height:30px;
         color: #FF66CC;
     }
     #data {
@@ -53,18 +52,13 @@
         position:absolute; top:80px; left:0px;
         color: #FF66CC;
     }
-    #setumei0{
-        position:absolute; top:55px; left:0px;
+    #data1{
+        font-size: 15px; width:120px;height:15px;
     }
-    #setumei{
-        position:absolute; top:95px; left:0px;
+    #data2{
+        font-size: 15px; width:120px;height:15px;
     }
-    #setumei2{
-        position:absolute; top:160px; left:0px;
-    }
-    #setumei3{
-        position:absolute; top:180px; left:0px;
-    }
-    #setumei4{
-        position:absolute; top:235px; left:10px;
+    #button {
+        font-size: 15px; width:80px; height:25px;
+        background-color: #000000; color:aquamarine;
     }
