--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,7 +7,6 @@
         color: #000088;
     }
     #map {
-        position : absolute;
         left : 0px;
     	width:355px;
     	height:280px;
@@ -60,5 +59,5 @@
     }
     #button {
         font-size: 15px; width:80px; height:25px;
-        background-color: #000000; color:aquamarine;
+        color:rgb(255, 174, 0);
     }
