--- a/www/css/style.css
+++ b/www/css/style.css
@@ -61,3 +61,7 @@
         font-size: 15px; width:80px; height:25px;
         color:rgb(255, 174, 0);
     }
+    #message {
+        border-style: solid;
+        border-color: grey;
+    }
