--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,6 +14,7 @@
     #btnA {
         font-size: 15px;
         left:0px; width:130px;height:30px;
+        background-color: #000000;
         color: #FF66CC;
     }
     #data {
@@ -59,7 +60,13 @@
     }
     #button {
         font-size: 15px; width:80px; height:25px;
+        background-color: #000000;
         color:rgb(255, 174, 0);
+    }
+    #button1 {
+        font-size: 15px; width:80px; height:25px;
+        background-color: #000000;
+        color:rgb(238, 255, 0);
     }
     #message {
         border-style: solid;
