--- a/www/css/style.css
+++ b/www/css/style.css
@@ -53,10 +53,10 @@
         color: #FF66CC;
     }
     #data1{
-        font-size: 15px; width:120px;height:15px;
+        font-size: 15px; width:150px;height:25px;
     }
     #data2{
-        font-size: 15px; width:120px;height:15px;
+        font-size: 15px; width:150px;height:25px;
     }
     #button {
         font-size: 15px; width:80px; height:25px;
@@ -71,4 +71,7 @@
     #message {
         border-style: solid;
         border-color: grey;
+    }
+    #data0{
+        font-size: 15px; width:300px; height:25px;
     }
