--- a/www/css/style.css
+++ b/www/css/style.css
@@ -69,9 +69,18 @@
         color:rgb(238, 255, 0);
     }
     #message {
+        font-size: 15px;
         border-style: solid;
         border-color: grey;
     }
     #data0{
         font-size: 15px; width:300px; height:25px;
+    }
+    #display{
+        font-size: 15px;
+        border-style: solid;
+        border-color: grey;
+    }
+    #now{
+        font-size: 15px;
     }
